remove redundant folders/files, customise mypham page

--- a/mypham.qmd
+++ b/mypham.qmd
@@ -3,6 +3,12 @@ title: "Mỹ phẩm"
 listing:
   contents: mypham
   type: grid
+  image-height: 4in
+  image-lazy-loading: false
+  fields: [image, title, subtitle, description]
+  field-display-names:
+    categories: "Loại mỹ phẩm"
+  max-description-length: 180
   sort: 
     - "title"
   categories: true
