--- a/mypham/avene-solaire-tinted/index.qmd
+++ b/mypham/avene-solaire-tinted/index.qmd
@@ -1,9 +1,9 @@
 ---
-title: "Kem chống nắng Avène SPF 50+ không mùi - 50ML"
+title: "Kem dưỡng ẩm có màu chống nắng SPF 50+ - 50 ml"
 subtitle: "Chính hãng Pháp"
 image: "image.jpg"
 categories:
 - Kem chống nắng
 ---
 
-Kem chống nắng hãng Avène của Pháp SPF 50+ không mùi có khả năng bảo vệ rất cao được thiết kế cho làn da nhạy cảm với ánh nắng mặt trời hoặc tiếp xúc với ánh nắng mặt trời gay gắt.
+Kem dưỡng ẩm lý tưởng cho làn da nhạy cảm với ánh nắng mặt trời, da trắng và trắng sữa (vàng hoe, đỏ), làn da luôn dễ bị cháy nắng hay bất kỳ làn da nào tiếp xúc với ánh nắng mặt trời mạnh
