--- a/mypham/hyaluron-active-b3-multi/index.qmd
+++ b/mypham/hyaluron-active-b3-multi/index.qmd
@@ -1,9 +1,9 @@
 ---
-title: "Kem dưỡng ẩm AVENE HYALURON ACTIV B3 Multi-Intensive - 40ml"
+title: "Kem dưỡng AVENE HYALURON ACTIV B3 Multi-Intensive - 40ml"
 subtitle: "Chính hãng Pháp"
 image: "image.jpg"
 categories:
-- Kem dưỡng ẩm
+- Kem dưỡng
 ---
 
 Kem có kết cấu mịn như nhung giúp làm đặc lại làn da và định hình lại rõ rệt đường nét khuôn mặt. Làn da sáng, căng mọng và tràn đầy sức sống.
