add profile picture and update description

--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Xách tay Đức Pháp Bỉ"
+image: xachtay.jpg
 about:
   template: jolla
   links:
@@ -8,6 +9,13 @@ about:
       href: https://zalo.me/84364367938
 ---
 
-Đồ xách tay từ các nước Đức, Pháp, Bỉ chính hãng, uy tín.\
-Chúng tôi nhận xách tay [**Mỹ Phẩm**](mypham.qmd), [**Nước hoa**](nuochoa.qmd), [**Túi xách**](tuixach.qmd), [**Thực phẩm chức năng**](tpcn.qmd), [**Trang sức**](trangsuc.qmd), [**Đồ em bé**](embe.qmd).\
+Đồ xách tay từ các nước Đức, Pháp, Bỉ chính hãng, uy tín.  
+Chúng tôi nhận xách tay:  
+- [**Mỹ Phẩm**](mypham.qmd)  
+- [**Nước hoa**](nuochoa.qmd)  
+- [**Túi xách**](tuixach.qmd)  
+- [**Thực phẩm chức năng**](tpcn.qmd)  
+- [**Trang sức**](trangsuc.qmd)  
+- [**Đồ em bé**](embe.qmd)  
+
 **Liên hệ với chúng tôi** tại đây 👇
