add photos to handbags and jewleries

--- a/trang-suc/diapason/index.qmd
+++ b/trang-suc/diapason/index.qmd
@@ -6,4 +6,5 @@ categories:
 - Bông tai
 ---
 
-Bông tai Swarovski đính đá pha lê trắng.
+Bông tai Swarovski đính đá pha lê trắng. ![](image.jpg)
+![](image.jpg)
