--- a/trang-suc/una-vang-hong/index.qmd
+++ b/trang-suc/una-vang-hong/index.qmd
@@ -6,4 +6,5 @@ categories:
 - Dây chuyền
 ---
 
-Dây chuyền Swarovski (màu vàng hồng) đính đá pha lê hồng và đá zirconia.
+Dây chuyền Swarovski (màu vàng hồng) đính đá pha lê hồng và đá zirconia. 
+![](image.jpg)
